kubernetes/argocd/applications/media/apps/prowlarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media
  labels:
    route.scope: internal
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Media
      url: "https://prowlarr.vaderrp.com/ping"
      conditions:
        - "[STATUS] == 200"
        - "[BODY].status == OK"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Prowlarr
    gethomepage.dev/icon: prowlarr.png
    gethomepage.dev/href: https://prowlarr.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=prowlarr
    gethomepage.dev/widget.type: prowlarr
    gethomepage.dev/widget.url: http://prowlarr.media.svc.cluster.local
    gethomepage.dev/widget.key: 33608bebb2f241e78355a02753680f00
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: network
  hostnames:
    - prowlarr.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward
      backendRefs:
        - group: ""
          kind: Service
          name: prowlarr
          port: 80
          weight: 1
